changed background-color for banner and title

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -12,6 +12,13 @@ body {
 
 .top-banner {
     background-color: #6d2cda;
+    color: #d0c0c8;
+    text-align: center;
+}
+
+.logo {
+    background-color: #191a20;
+    color: #d0c0c8;
 }
 
 ul {
