--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -8,12 +8,17 @@ body {
     text-align: center;
 }
 
+nav {
+    display: inline;
+}
+
 .logo {
     background-color: #191a20;
     color: #d0c0c8;
     width: 30%;
     height: 5rem;
     font-size: 2rem;
+    float: left;
 }
 
 ul {
