--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -25,6 +25,8 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    background-color: #333c3f;
 }
 
 li {
@@ -33,7 +35,7 @@ li {
 
 li a {
     display: block;
-    color: #726b69;
+    color: #d0c0c8;
     text-align: center;
     padding: 14px 16px;
     background-color: #333c3f;
@@ -41,12 +43,12 @@ li a {
 }
 
 li a:hover:not(.active) {
-    background-color: #d0c0c8;
+    background-color: #6d2cda;
   }
   
 
 .active {
-    background-color: #6d2cda;
+    background-color: #515d62;
     color: white;
 }
 
