added line-height: 3rem to .top-banner

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -6,6 +6,8 @@ body {
     background-color: #6d2cda;
     color: #d0c0c8;
     text-align: center;
+    height: 3rem;
+    line-height: 3rem;
 }
 
 nav {
