--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #333c3f;
+    background-color: #1a1b22;
     margin: 0rem;
 }
 
@@ -32,7 +32,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333c3f;
+    background-color: #1a1b22;
 }
 
 li {
