changed background color of navbar and logo

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -17,7 +17,7 @@ nav {
 }
 
 .logo {
-    background-color: #191a20;
+    background-color: #040405;
     color: #d0c0c8;
     width: 30%;
     height: 7rem;
@@ -44,7 +44,7 @@ li a {
     color: #d0c0c8;
     text-align: center;
     padding: 2rem 2rem;
-    background-color: #333c3f;
+    background-color: #1a1b22;
     text-decoration: none;
     font-size: 1.5rem;
 }
