Added Text-Align Center to Skills

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -104,6 +104,7 @@ main {
     width: 100%;
     color: #d0c0c8;
     background-image: linear-gradient(to right, #6d2cda, #9753de);
+    text-align: center;
   }
 
   
