--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -1,6 +1,8 @@
 html, body {
     background-color: #1a1b22;
     margin: 0rem;
+    font-family: 'Lato', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
 }
 
 .top-banner {
@@ -25,6 +27,7 @@ nav {
     float: left;
     line-height: .5rem;
     text-indent: 10%;
+    font-weight: bold;
 }
 
 ul {
@@ -86,6 +89,7 @@ main {
     padding: 30px;
     color: white;
     margin-left: -150px;
+    font-weight: bold;
   }
 
   .right h1 {
