Added div class contact-container to index.html, Added Underline to h2 elements in style.css

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -5,6 +5,10 @@ html, body {
     /* font-family: 'Roboto', sans-serif; */
 }
 
+h2 {
+    text-decoration: underline;
+}
+
 .top-banner {
     background-image: linear-gradient(to right, #6d2cda, #9753de);
     color: #d0c0c8;
