Added Read-more link to about, display none for more-info, added JavaScript to change display of more-info to block on mouse click

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -109,6 +109,14 @@ main {
     line-height: 25px;
   }
 
+#read-more {
+    cursor: pointer;
+}
+
+#more-info {
+    display: none;
+}
+
 /* Projects Section */
 
 #projects {
