--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -1,8 +1,8 @@
 html, body {
     background-color: #1a1b22;
     margin: 0rem;
-    font-family: 'Lato', sans-serif;
-    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Kanit', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
 }
 
 h2 {
