--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -124,6 +124,18 @@ main {
     display: none;
 }
 
+#less-info {
+  display: block;
+}
+
+#read-less {
+  cursor: pointer;
+}
+
+#read-less:hover {
+  color: #6d2cda;
+}
+
 /* Projects Section */
 
 #projects {
