Added padding top/bottom for contact section

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -217,6 +217,11 @@ footer {
 
 /* Contact Page Styling */
 
+#contact {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 /* Style all font awesome icons */
 .fa {
   padding: 20px;
