Added paddung-bottom to .channels

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -222,6 +222,10 @@ footer {
   padding-bottom: 2rem;
 }
 
+.channels {
+  padding-bottom: 2rem;
+}
+
 /* Style all font awesome icons */
 .fa {
   padding: 20px;
