Commented out Google icon from contact.html and style.css

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -251,10 +251,10 @@ footer {
 
 /* Google */
 
-.fa-google {
+/* .fa-google {
   background: #dd4b39;
   color: white;
-}
+} */
 
 /* Facebook */
 .fa-facebook {
