--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -207,6 +207,21 @@ footer {
 }
 
 
+/* -- Responsive Layout -- */
+
+@media only screen and (max-width: 960px) {
+  
+}
+
+@media only screen and (max-width: 700px) {
+  
+}
+
+@media only screen and (max-width: 470px) {
+
+  }
+
+
 /* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column {
