--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -69,6 +69,10 @@ nav li a:hover:not(.active) {
     color: white;
 }
 
+.dropdown {
+  display: none;
+}
+
 /* Main section */
 main {
     height: auto;
@@ -211,10 +215,60 @@ footer {
 /* -- Responsive Layout -- */
 
 @media only screen and (max-width: 960px) {
-  
+  .top-banner {
+    height: 2.5rem;
+    line-height: 1rem;
+  }
 }
 
 @media only screen and (max-width: 700px) {
+
+  .nav {
+    display: none;
+}
+
+/* Style The Dropdown Button */
+.dd-btn {
+    background-color: seashell;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    display: inline-block;
+    float: right;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: seashell;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: teal}
+
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dd-btn {
+    background-color: seashell;
+}
 
   /* Responsive layout - when the screen is less than 700px wide, make the three columns stack on top of each other instead of next to each other */
   .column {
