--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -219,6 +219,11 @@ footer {
     height: 2.5rem;
     line-height: 1rem;
   }
+
+  li a {
+    padding: 1rem 1rem;
+    font-size: 1rem;
+}
 }
 
 @media only screen and (max-width: 700px) {
@@ -238,7 +243,7 @@ footer {
 }
 
 .dropdown {
-    display: inline-block;
+    display: block;
     float: right;
 
 }
@@ -259,7 +264,7 @@ footer {
     display: block;
 }
 
-.dropdown-content a:hover {background-color: teal}
+.dropdown-content a:hover {background-color: #9753de}
 
   
 .dropdown:hover .dropdown-content {
