Changed top-banner height to 3.5px at max-width 470

--- a/personalPortfolioWebsite/resources/css/style.css
+++ b/personalPortfolioWebsite/resources/css/style.css
@@ -313,6 +313,18 @@ footer {
 }
 
 @media only screen and (max-width: 470px) {
+
+.top-banner {
+  height: 3.5rem;
+  line-height: 1rem;
+}
+
+
+.right {
+  display: none;
+}  
+
+
 #skills {
   padding-bottom: 6rem;
 }
