--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,7 +88,7 @@ main {
 .left {
     width: 50%;
     height: 775px;
-    background-image: url("portfolioProjects/resorces/images/fredBarrett02.jpg");  
+    background-image: url("images/fredBarrett02.jpg");  
     background-size: cover;
     background-position: center;
   }
