--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,7 +88,7 @@ main {
 .left {
     width: 50%;
     height: 775px;
-    background-image: url("https://github.com/freddieb77/portfolioProjects/blob/main/resources/images/fredBarrett02.jpg?raw=true")
+    background-image: url(/portfolioProjects/resources/images/fredBarrett02.jpg)
     background-size: cover;
     background-position: center;
   }
