--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,7 +54,7 @@ li a {
     text-align: center;
     padding: 2rem 2rem;
     background-color: #1a1b22;
-    text-decoration: none;#d0c0c8
+    text-decoration: none;
     font-size: 1.5rem;
 }
 
